# azure-ML-SDK

./: .gitignore  README.md  app.py  explore-azure-datasets.ipynb  pyproject.toml  try-azure-ml-sp.ipynb  try-datasets.ipynb  try-transformers.ipynb
